source/components/banner.scss
// BANNER
// -----------------------------------------------------------------------------

@use "../settings" as *;
@use "../helpers/animate-transit" as *;
@use "../helpers/focus-visible" as *;
@use "../helpers/set-breakpoint" as *;

.banner {
  padding-top: $space-regular;
  padding-bottom: $space-regular;
  border-bottom: $border-width-thick solid $color-brand-light-c;
  color: $color-brand-regular;
  background-color: $color-brand-light-a;

  &.is-transiting-out {
    animation: banner-transit-out $transition-default;
  }

  &-inside {
    display: flex;
    align-items: flex-start;
    max-width: $container-max-width;
    padding-right: $space-large-d;
    padding-left: $space-large-d;
    margin-right: auto;
    margin-left: auto;

    @include set-breakpoint(tablet) {
      padding-right: $space-large-b;
      padding-left: $space-large-b;
    }
  }

  &-icon {
    margin-top: $space-small-e;
    margin-bottom: $space-small-e;
  }

  &-message {
    margin-top: $space-small-e;
    margin-bottom: $space-small-e;

    &:not(:first-child) {
      margin-left: $space-regular;
    }

    &:not(:last-child) {
      margin-right: $space-regular;
    }
  }

  &-button {
    margin-top: -$space-small-d;
    margin-bottom: -$space-small-d;
  }
}

// Positive

.banner-positive {
  border-color: $color-positive-light-c;
  color: $color-positive-regular;
  background-color: $color-positive-light-a;
}

// Attentive

.banner-attentive {
  border-color: $color-attentive-light-c;
  color: $color-attentive-regular;
  background-color: $color-attentive-light-a;
}

// Negative

.banner-negative {
  border-color: $color-negative-light-c;
  color: $color-negative-regular;
  background-color: $color-negative-light-a;
}

// Neutral

.banner-neutral {
  border-color: $color-neutral-light-c;
  color: $color-neutral-regular;
  background-color: $color-neutral-light-a;
}

// Keyframes

@include animate-transit(banner, "fade", "out");

